[gd_scene load_steps=5 format=3 uid="uid://fbjpfdknlaau"]

[ext_resource type="Script" uid="uid://dx5va6v2ib3ht" path="res://scenes/ui/battle_over_panel.gd" id="1_5h67t"]
[ext_resource type="Theme" uid="uid://khyscqqmwjts" path="res://main_theme.tres" id="1_dna7b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5h67t"]
bg_color = Color(0.227451, 0.243137, 0.305882, 0.682353)

[sub_resource type="LabelSettings" id="LabelSettings_qotfm"]
font_size = 24

[node name="BattleOverPanel" type="Panel"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5h67t")
script = ExtResource("1_5h67t")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -24.0
offset_right = 54.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResultLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_dna7b")
text = "Victory!"
label_settings = SubResource("LabelSettings_qotfm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 12)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_dna7b")
text = "Rewards"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 12)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_dna7b")
text = "Restart"

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
