class_name BattleOverPanel
extends Panel

enum Type {WIN, LOSE}

@onready var result_label: Label = %ResultLabel
@onready var continue_button: Button = %ContinueButton
@onready var restart_button: Button = %RestartButton

func _ready() -> void:
	#continue_button.pressed.connect(get_tree().quit)
	#restart_button.pressed.connect(get_tree().reload_current_scene)
	Events.battle_over_screen_requested.connect(show_screen)
	

func _on_continue_button_pressed() -> void:
	#get_tree().quit()
	Events.battle_won.emit()

func _on_restart_button_pressed() -> void:
	get_tree().reload_current_scene()

func show_screen(text: String, type: Type) -> void:
	result_label.text = text
	continue_button.visible = type == Type.WIN
	restart_button.visible = type == Type.LOSE
	get_tree().paused = true
	show()
